--- a/_sass/env/pwp.sass
+++ b/_sass/env/pwp.sass
@@ -50,7 +50,7 @@ $hero-follow-top: 4.5vh
   .site__logo
     margin: 0 5vw
     text-align: center
-    width: 100px
+    height: 10vh
 
 .segment__keywords
   height: 50%
@@ -72,6 +72,7 @@ $hero-follow-top: 4.5vh
   display: flex
   flex-direction: row
   flex-wrap: wrap
+  justify-content: space-around
   & > *
     padding: 3rem 0
     width: 50%
